--- a/ios/WordPress/Base.lproj/LaunchScreen.xib
+++ b/ios/WordPress/Base.lproj/LaunchScreen.xib
@@ -3,7 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -12,22 +11,25 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="WordPress" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="267" width="441" height="43"/>
-                    <fontDescription key="fontDescription" name="Georgia" family="Georgia" pointSize="33"/>
-                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <color key="highlightedColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" image="app-icon-60.png" translatesAutoresizingMaskIntoConstraints="NO" id="26c-IU-s5d">
+                    <rect key="frame" x="186" y="211" width="108" height="57"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="57" id="0Mj-yE-sPf"/>
+                        <constraint firstAttribute="width" constant="108" id="Rs6-JO-Aqg"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.1803921568627451" green="0.45098039215686275" blue="0.69019607843137254" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
-                <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstItem="26c-IU-s5d" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="ETH-OK-7D2"/>
+                <constraint firstItem="26c-IU-s5d" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="UjR-Q5-Vau"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="app-icon-60.png" width="60" height="60"/>
+    </resources>
 </document>
